--- a/Blog/conf/application.conf
+++ b/Blog/conf/application.conf
@@ -30,6 +30,11 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+db.default.driver=com.mysql.jdbc.Driver 
+db.default.url="jdbc:mysql://localhost/blog" 
+db.default.user=root 
+db.default.pass=root
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -40,7 +45,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
